name:           aud-spec-picker
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         miguelnegrao

executable aud-spec-picker
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   ssv,
                   MissingH,
                   data-accessor,
                   csv,
                   cmdargs
  extensions:      DeriveDataTypeable
  --ghc-options:     -Wall -rtsopts -O2 -XDeriveDataTypeable

